--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+
+
 .App {
   text-align: center;
 }
@@ -35,4 +37,16 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.wand-info{
+  margin-right: 20px;
+}
+
+.table{
+
+}
+
+.filter-dropdown-container{
+  display: inline-flex;
 }
